--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs-extra": "^11.3.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "zod": "^3.24.1"
   },
@@ -37,6 +39,8 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
