`Added dependencies and updated code for socket.io and qrcode`

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^8.8.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
+    "qrcode": "^1.5.4",
+    "socket.io": "^4.8.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
