--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.19",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fs-extra": "^11.3.2",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.2",
